Added changes required by editorial team

--- a/plostemplate/ManuscriptPLOS.tex
+++ b/plostemplate/ManuscriptPLOS.tex
@@ -473,7 +473,7 @@ The scorecard (Fig~\ref{fig4}) shows that this reserve achieves a general score 
 \label{fig4}
 \end{figure}
 
-Among the biological indicators, the greatest effect of the reserve was observed for snail and sea cucumber densities, with values of \(\beta_2 = 97.17\) (\emph{p} \textless{} 0.05) and \(\beta_2 = 2.31\) (\emph{p} \textless{} 0.05), respectively. Fish indicators showed no significant change (\emph{p} \textgreater{} 0.1), with negative trends for Shannon's diversity index and fish species richness and positive trends for density, biomass, and mean trophic level. Changes through time for these indicators are presented in Figure~\ref{fig5}, and a summary of \(\beta_2\) coefficients is provided in Table~\ref{table3}.
+Among the biological indicators, the greatest effect of the reserve was observed for snail and sea cucumber densities, with values of \(\beta_2 = 97.17\) (\emph{p} \textless{} 0.05) and \(\beta_2 = 2.31\) (\emph{p} \textless{} 0.05), respectively. Fish indicators showed no significant change (\emph{p} \textgreater{} 0.1), with negative trends for Shannon's diversity index and fish species richness and positive trends for density, biomass, and mean trophic level. Changes through time for these indicators are presented in Fig~\ref{fig5}, and a summary of \(\beta_2\) coefficients is provided in Table~\ref{table3}.
 
 \begin{figure}[!h]
 \caption{{\bf Plots for values of each biological indicator (y-axis) through time (x-axis).}
@@ -521,7 +521,7 @@ Cucumber & 2.31 (1.17)** & 1.9782\\
 \end{table}
 
 
-One of the main objectives of this reserve was to increase landings. Results of the socioeconomic indicators show that total landings were, on average, 64.20 metric tonnes higher (\emph{p} \textgreater{} 0.1) after the implementation of the reserves, though this cannot necessarily be interpreted as causal, because it relies entirely on a before-after comparison. Total income was \$10,344.85 (\emph{p} \textless{} 0.05) thousands of Mexican Pesos (K MXP) higher after the implementation of the reserves. On average, lobster and sea cucumber landings increased, while urchin and snail landings and income decreased. Figure~\ref{fig6} presents the changes in these indicators through time, and Table~\ref{table4} summarizes these results.
+One of the main objectives of this reserve was to increase landings. Results of the socioeconomic indicators show that total landings were, on average, 64.20 metric tonnes higher (\emph{p} \textgreater{} 0.1) after the implementation of the reserves, though this cannot necessarily be interpreted as causal, because it relies entirely on a before-after comparison. Total income was \$10,344.85 (\emph{p} \textless{} 0.05) thousands of Mexican Pesos (K MXP) higher after the implementation of the reserves. On average, lobster and sea cucumber landings increased, while urchin and snail landings and income decreased. Fig~\ref{fig6} presents the changes in these indicators through time, and Table~\ref{table4} summarizes these results.
 
 \begin{figure}[!h]
 \caption{{\bf Plots for values of each socioeconomic indicator (y-axis) through time (x-axis).}
@@ -614,7 +614,7 @@ Social Impact of Reserve & The reserves have had a significant positive social i
 
 We have developed and presented an automated approach for evaluating the effectiveness of marine reserves in Mexico, and perhaps around the world. Here we highlight MAREA's utility for evidence-based management, and comment on a few of its shortcomings. The findings from Isla Natividad are used purely to validate the relevance of MAREA rather than to discuss particularities of the marine reserve effectiveness, which has been described before \cite{micheli_2012-EU,rossetto_2015-V0,munguavega_2015-yg}. We use examples from the case study to build on the utility of MAREA and discuss ways in which results can be interpreted to inform management.
 
-The causal inference techniques used by MAREA have been suggested \cite{burgess_2018-HN,ferraro_2006-oW} and used \cite{moland_2013-VP} before in other ad hoc studies. This approach reduces ambiguity in the interpretation of results. For example, invertebrate density decreased through time inside and outside of the reserve (Figure~\ref{fig5}h). In this case, a before--after evaluation of the reserve (\emph{i.e.} ignoring the control site) would have incorrectly concluded that the reserve failed to protect invertebrates. On the other hand, a control--impact approach (\emph{i.e.} compare reserve vs.~control site only in 2016) would have identified higher densities inside the reserve, concluding that the reserve increases invertebrate density. However, by executing a formal difference-in-differences approach for causal inference, MAREA identifies the changes through time and across sites, and estimates the effect of the reserve on density at \(\beta_2 = 91.21\) (\emph{p} \textless{} 0.05). This approach reveals that invertebrate densities decrease in both sites through time, but the decrease is faster for the control site, thus yielding a positive value for \(\beta_2\).
+The causal inference techniques used by MAREA have been suggested \cite{burgess_2018-HN,ferraro_2006-oW} and used \cite{moland_2013-VP} before in other ad hoc studies. This approach reduces ambiguity in the interpretation of results. For example, invertebrate density decreased through time inside and outside of the reserve (Fig~\ref{fig5}h). In this case, a before--after evaluation of the reserve (\emph{i.e.} ignoring the control site) would have incorrectly concluded that the reserve failed to protect invertebrates. On the other hand, a control--impact approach (\emph{i.e.} compare reserve vs.~control site only in 2016) would have identified higher densities inside the reserve, concluding that the reserve increases invertebrate density. However, by executing a formal difference-in-differences approach for causal inference, MAREA identifies the changes through time and across sites, and estimates the effect of the reserve on density at \(\beta_2 = 91.21\) (\emph{p} \textless{} 0.05). This approach reveals that invertebrate densities decrease in both sites through time, but the decrease is faster for the control site, thus yielding a positive value for \(\beta_2\).
 
 The approach used by MAREA to estimate the effect of the reserve on biological indicators requires cautious interpretation of the results. The value of the \(\beta_2\) coefficient represents the difference between the temporal trends of the reserve and control sites \cite{moland_2013-VP}. As exemplified by the case of invertebrate densities, a positive value (\emph{i.e.} \(\beta_2 > 0\)) does not necessarily indicate an increase in the indicator through time, but rather a positive difference with respect to the temporal trend of the control site. The inverse occurs for negative values of \(\beta_2\).
 
@@ -646,8 +646,8 @@ The first release of MAREA is now available, and it will continue to be develope
 \label{S2_Appendix}
 {\bf Survey to collect governance information from fishing communities.} Spanish version
 
-\paragraph*{S3 Table}
-\label{S3_Table}
+\paragraph*{S1 Table}
+\label{S1_Table}
 {\bf Assigned values and reasoning of socioeconomic and governance indicators used to color-code the scorecard in MAREA}
 
 \section*{Acknowledgements}\label{acknowledgements}
@@ -752,7 +752,7 @@ Sala E, Giakoumi S.
 
 \bibitem{betti_2017-lq}
 Betti F, Bavestrello G, Bo M, Asnaghi V, Chiantore M, Bava S, et~al.
-\newblock Over 10 years of variation in Mediterranean reef benthic
+\newblock Over 10 years of variation in Mediterranean reef benthic
   communities.
 \newblock Marine Ecology. 2017;38(3):e12439.
 \newblock doi:{10.1111/maec.12439}.
